# aegis-inference

./: .gitignore  Cargo.toml  LICENSE  README.md  aegis.rb  benchmark.sh  gdb_trace.txt  gdb_trace_debug.txt  install.sh  validation_output.txt
.github/ISSUE_TEMPLATE/: benchmark_submission.md
.github/workflows/: ci.yml  release.yml
mesh/: Cargo.toml
mesh/src/: main.rs
scripts/: autonomous_sales_agent.py  data_pipeline.py  ternary_quantizer.py
src/: architecture.rs  ffi.rs  gguf_parser.rs  lib.rs  main.rs  tokenizer.rs
src/attention/: flash_cpu.rs  mod.rs
src/engine/: mod.rs
src/gguf/: mod.rs  parser.rs  weight_loader.rs
src/kv_cache/: mod.rs  page_pool.rs
src/scheduler/: batching.rs
src/simd/: avx512_bw.rs  dispatch.rs  mod.rs
src/tokenizer/: mod.rs
