[package]
name = "aegis_inference"
version = "0.1.0"
edition = "2024"

[lib]
name = "aegis"
crate-type = ["lib", "cdylib"]

[dependencies]
axum = "0.8.9"
memmap2 = "0.9.10"
rand = "0.10.1"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
