[package]
name = "aegis_mesh"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { version = "0.56.0", features = ["tokio", "gossipsub", "mdns", "tcp", "noise", "yamux", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
